--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^7.21.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-visible-focus": "0.0.4",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
